# scale-type-resolver

./: .gitignore  CHANGELOG.md  Cargo.toml  FILE_TEMPLATE  README.md
.github/workflows/: rust.yml
src/: lib.rs  portable_registry.rs  visitor.rs
