[package]
name = "scale-type-resolver"
version = "0.1.0"
edition = "2021"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
repository = "https://github.com/paritytech/scale-type-resolver"
homepage = "https://www.parity.io/"
keywords = ["parity", "scale", "decoding"]

[features]
default = ["scale-info"]

# Impl the TypeResolver trait on scale_info::PortableRegistry
scale-info = ["dep:scale-info"]

[dependencies]
scale-info = { version = "2.7.0", default-features = false, optional = true }

[dev-dependencies]
bitvec = "1"
scale-info = { version = "2.7.0", default-features = false, features = ["std", "bit-vec", "derive"] }