[package]
name = "scale-type-resolver"
description = "A low level trait to be generic over how to resolve SCALE type information"
version = "0.3.0"
edition = "2021"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
repository = "https://github.com/paritytech/scale-type-resolver"
homepage = "https://www.parity.io/"
keywords = ["parity", "scale", "decoding"]

[features]
default = ["scale-info", "visitor"]

# Impl the TypeResolver trait on scale_info::PortableRegistry
scale-info = ["dep:scale-info"]

# Provide a concrete ResolveTypeVisitor impl (requires smallvec).
visitor = ["dep:smallvec"]

[dependencies]
scale-info = { version = "2.11.5", default-features = false, optional = true }
smallvec = { version = "1.10.0", optional = true }

[dev-dependencies]
bitvec = "1"
scale-info = { version = "2.11.5", default-features = false, features = ["std", "bit-vec", "derive"] }